added auth and user creation using jwt strategy for auth, fixed a prisma issues with version 7.0 requiring adapters to properly connect to psql db
